<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:clickable="false"
            android:contentDescription="@string/logo_find_me_sos"
            app:srcCompat="@drawable/l2" />
        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:clickable="true"
            android:onClick="goToSettings"
            app:srcCompat="@drawable/settings"
            android:contentDescription="@string/go_to_settings_button"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/mapview"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:contentDescription="@string/map_of_current_location" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/textview3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/latitude"
            android:textColor="#ffd700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/longitude"
            android:textColor="#ffd700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">
        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">
            <TextView
                android:id="@+id/tvalttitmap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="end"
                android:textColor="#ffd700"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/elevation_map"/>
            <TextView
                android:id="@+id/tvaltvalmap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center|top"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvalttitgps"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="end"
                android:textColor="#ffd700"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/elevation_gps"/>
            <TextView
                android:id="@+id/tvaltvalgps"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center|top"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/refreshLoc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_button"
            android:gravity="center"
            android:onClick="refreshLocationButton"
            android:text="@string/refresh"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/go_to_google_maps_button"
            android:onClick="launchGMaps"
            app:srcCompat="@drawable/maps_logo"
            android:focusable="true" />
        <Button
            android:id="@+id/copy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_button"
            android:gravity="center"
            android:onClick="copyLocationToClipboard"
            android:text="@string/copy_loc"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
            android:layout_marginTop="40dp"
        android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:contentDescription="1" />
    <Button
        android:id="@+id/text"
        android:layout_width="80dp"
        android:layout_weight="1"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:onClick="sendSMS"
        android:text="@string/sms"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:contentDescription="1" />
        <Button
            android:id="@+id/email"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:onClick="shareLocationButton"
            android:text="@string/email"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:contentDescription="1" />
    </LinearLayout>
    </TableLayout>
</ScrollView>